--- a/src/app/modules/home/pages/home/home.component.scss
+++ b/src/app/modules/home/pages/home/home.component.scss
@@ -16,6 +16,11 @@ ion-header{
       right: 20%;
     }
   }
+  .user_icon{
+    position: absolute;
+    right: 5%;
+    top: 5%;
+  }
 }
 .reminder_item{
   margin-bottom: 20px;
@@ -38,8 +43,8 @@ ion-header{
   }
 }
 
-.no_alarm{
-  height: 100%;
+.no_data_found{
+  height: 80vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -82,3 +87,25 @@ ion-modal{
   background-color: red;
 }
 
+.user_contact{
+  .user_profile{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: contain;
+  }
+  .user_profile_icon{
+    display: grid;
+    place-content: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    ion-icon{
+      font-size: 32px;
+    }
+  }
+}
+
+.user_contact:active{
+  background-color: #f5f5f5;
+}
