--- a/src/app/modules/home/pages/update-reminder/update-reminder.component.html
+++ b/src/app/modules/home/pages/update-reminder/update-reminder.component.html
@@ -1,6 +1,7 @@
 <ion-header class="update_header ion-no-border">
-  <ion-grid>
-    <ion-row>
+  <ion-toolbar>
+    <ion-grid>
+      <ion-row>
       <ion-col size="2">
         <ion-icon name="close-outline" size="large" (click)="goToHome()"></ion-icon>
       </ion-col>
@@ -13,6 +14,7 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+</ion-toolbar>
 </ion-header>
 
 <ion-content>
