--- a/src/global.scss
+++ b/src/global.scss
@@ -26,8 +26,9 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 
-.searchbar-input, .sc-ion-searchbar-md{
-  padding-inline-start: 7px !important;
+.searchbar-input, .sc-ion-searchbar-md, .form-outline{
+  // padding-inline-start: 7px !important;
+  margin-right: 10px;
   box-shadow: none;
 }
 
@@ -56,4 +57,10 @@ ion-toggle{
   --handle-spacing: 5px;
   height: 28px !important;
 
+}
+
+
+ion-toolbar{
+  --background: #4D77FF;
+  color: #fff;
 }
